background: league system

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -270,26 +270,15 @@ my findings are in contrast to other studies in terms of effects during upsettin
 \newpage
 \section{Background}\label{sec_soc_ext:background}
 
-German football league system, different leagues/divisions
-https://www.dfl.de/en/about/history/
-Bundesliga is an independent body , separated from the German Football Association (DFL)
-
-%in league 1 and 2; in each 17 home and away games
-%matchplan: grundlage internationale Spiele
-% exploit plaubily random variation in the timing of matches
-%In die Vorbereitung der Spielpläne für die Bundesliga und die 2. Bundesliga fließen Vorgaben von Kommunen, Sicherheitsorganen, der Zentralen Informationsstelle Sporteinsätze (ZIS), von internationalen Fußballverbänden (FIFA/UEFA), von Fans, Clubs und Stadionbetreibern ein. Neben naheliegenden Einschränkungen wie der Tatsache, dass benachbarte Clubs versetzt zu ihren Heimspielen antreten sollten, müssen u. a. auch Feiertage, parallele Großveranstaltungen (zB Oktoberfest) oder Spieltermine internationaler Wettbewerbe (UEFA Champions League & UEFA Europa League) berücksichtigt werden.
-%https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp
 
 
-
-
+% German Football League System
 \subsection{German Football League System}
-- top three professional levels with one division each: held under jurisdiction of DFB and DFL
-- Bundesliga and 2. Bundesliga: organized by German Football League (DFL)
-- 3. Liga organized by German Football Association (DFB) itself
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights \textit{`Bundesliga'} and \textit{`2. Bundesliga'} are organized by the DFL, the third division \textit{`3. Liga'} is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams who play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the Bundesliga and the 2nd Bundesliga uses the international games as a basis.\footnote{For details of how the match plans are made please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} Furthermore, the DFL has to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighbouring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League)
 
 
 
+% Soccer and Crime
 \subsection{Soccer and Violent Crime}
 
 
@@ -320,6 +309,7 @@ Bundesliga is an independent body , separated from the German Football Associati
 	Ultras feel challenged simply by the presence of police officers
 	
 	\cite{poutvaara2009police}: impact of counter-hooliganism policy in the Swedish context
+	policing on violent crime, they find that the reallocation of the Sport Intelligence and Tactical Unit to other activities was accompanied by increases in violent crime by hooligans.
 	
 
 - coming back to overarching theme of who pays for that
@@ -532,17 +522,6 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 
-
-
-\bigskip
-{\color{red}\textbf{TO DO (decreasing priority)}}
-\begin{itemize}
-	\item ML application
-	\item break it down to hour windows: before, during, and after the game - do I see a incapacitation effect as Dahl and Della Vigna (2009)
-	\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
-	\item placebo outcomes (any type that is not affected)?
-	\item control for mass events (see BHR paper)
-\end{itemize}
 
 
 
@@ -1165,6 +1144,22 @@ larger effects for prominent games
 	\item how many games are played on holidays? drop these? 
 	\item drop when information of crime is not available on the hour
 \end{itemize}
+
+
+
+
+
+
+\newpage
+{\color{red}\textbf{TO DO (decreasing priority)}}
+\begin{itemize}
+	\item ML application
+	\item break it down to hour windows: before, during, and after the game - do I see a incapacitation effect as Dahl and Della Vigna (2009)
+	\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
+	\item placebo outcomes (any type that is not affected)?
+	\item control for mass events (see BHR paper)
+\end{itemize}
+
 
 
 \end{document}
