background: theories spectator violence

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -289,18 +289,11 @@ Spectator violence has a long tradition in the environment of professional socce
 
 
 
-- theories on spectator violence: 
+% THEORIES OF SPECTATOR VIOLENCE
+There are a couple of theories concerning spectator violence.\footnote{In the following, I focus on theories of why the rate of violence is increasing due to soccer games. However, there could also be the case of a decreasing assault rate. This could be explained by an `self-incapacitation effect' due to the attendance of the match for individuals with a greater propensity to act violently as shown by \cite{dahl2009movie} for violent movies. Yet, only hourly data can reveal the presence of the `self-incapacitation effect'.} First, the higher assault rate could be a mere mechanic effect arising from increased social contacts and a change in how the interactions take place \citep{montolio2019measuring}. For instance, the Bundesliga has the highest average attendance per match across all European main football leagues\citep{wicker2017effect}. In the season of 2014/15, more than 42,000 spectators attended on average a game in the highest flight of the German league system. This aspect is particularly relevant for smaller municipalities, which attract thousand of spectators per game \citep{lindo2018college}. Second, instinctual theories of aggression find human aggression genetically based \citep{baron1977human}. In other words, aggressive behavior is an inevitable predisposition. Third, spectator violence may be the result from physiological arousal \citep{branscombe1992role}. Potential determinants of physiological arousal are increased heart-rate, blood pressure, and respiration, which may influence affect, cognition and social behavior. Fourth, \cite{dollard1939frustration} put forward the idea of the frustration-aggression hypothesis. If the favorite team suffered a defeat, this may precipitate aggressive fan behavior (e.g. see the results obtained by \cite{card2011family}). Fifth, \cite{bandura1973aggression, bandura2007social} postulates the notion of `social learning' or mimicking behavior. Independent of the outcome of the match, the sheer observation of the game is enough to unleash violent actions. 
 
-\footnote{Only consider theories of why the rate of violence in increasing. There could be also the case of a decreasing assault rate due to soccer games. This could happen as an `self-incapacitation effect' due to the attendance of the match for individuals with a greater propensity to act violently as shown by \cite{dahl2009movie} for violent movies. Yet, only hourly data can reveal the presence of the `self-incapacitation effect'.}
 
-		* mass events: 
-			- mechanical effect
-			- increase social contact and change how the interactions take place (in particular for smaller municipalities which attract thousands of spectators) \cite{lindo2018college}. Bundesliga has highest average attendance per match across all European main football leagues\citep{wicker2017effect}: 42,700 per match in 2018/19.
-		* Instinctual theories of aggression: human aggression genetically based, inevitable predisposition \cite{baron1977human}
-		* physiological arousal \cite{branscombe1992role}
-		* frustration-aggression hypothesis \cite{dollard1939frustration}:  in the event of defeat of the favorite team precipitates aggressive fan behavior (see results found by \cite{card2011family})
-		* social learning \cite{bandura1973aggression,bandura2007social}: independent of the outcome of the game, observation of the game enough to unleash violent actions. 
-		* 
+
 
 
 - role of alcohol
