--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,13 +1,5 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+% Encoding: UTF-8
 
-%% Created for Marc Fabel at 2020-08-06 11:37:34 +0200 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@comment{jabref-meta: databaseType:bibtex;}
 
 
 
@@ -268,3 +260,27 @@
 	Publisher = {New York: Plenum Press},
 	Title = {{Human Aggression}},
 	Year = {1977}}
+
+@Article{dahl2009movie,
+  author    = {Dahl, Gordon and DellaVigna, Stefano},
+  title     = {Does movie violence increase violent crime?},
+  journal   = {{The Quarterly Journal of Economics}},
+  year      = {2009},
+  volume    = {124},
+  number    = {2},
+  pages     = {677--734},
+  publisher = {MIT Press},
+}
+
+@Article{poutvaara2009police,
+  author    = {Poutvaara, Panu and Priks, Mikael},
+  title     = {{The effect of police intelligence on group violence: Evidence from reassignments in Sweden}},
+  journal   = {{Journal of Public Economics}},
+  year      = {2009},
+  volume    = {93},
+  number    = {3-4},
+  pages     = {403--411},
+  publisher = {Elsevier},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
