--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -294,14 +294,19 @@ There are a couple of theories concerning spectator violence.\footnote{In the fo
 
 
 
+% The role of alcohol
+Alcohol plays a crucial role in the context of spectator violence in German football stadiums. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2\%) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brasil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one sixth (538 million Euros in 2017/18) of the Bundesliga club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For that reason, alcohol is very present in German football arenas, with all the potential side effects. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. 
+
+% any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
+% Statista survey: 56 \% of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35\% defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
 
 
-- role of alcohol
-		- \cite{PCS2018}: more than every fourth assault (26.2\%) is commuted under the influence of alcohol
-		- \cite{cook2013virtuous} pharmacological effects on aggression and cognitive functioning 
-			* loss of inhibition, impairments of judgment, alcohol is anesthetic, participants of experiments show more aggressive behavior after drinking 
-		- banned for some games: high risk and CL (source?)
-		- any data on how much is consumed?
+ 
+
+
+		
+		
+		
 		
 	
 - hooligans: fascination of violence
