--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,34 @@
-% Encoding: UTF-8
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Marc Fabel at 2020-08-10 14:06:17 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@comment{jabref-meta: databaseType:bibtex;}
 
 
 
+@article{pilz2005kuttenfan,
+	Author = {Pilz, Gunter A},
+	Date-Added = {2020-08-10 14:05:39 +0200},
+	Date-Modified = {2020-08-10 14:06:11 +0200},
+	Journal = {{Deutsche Polizei}},
+	Number = {11},
+	Pages = {6--12},
+	Title = {{Vom Kuttenfan und Hooligan zum Ultra und Hooltra--Wandel des Zuschauerverhaltens im Profifu{\ss}ball}},
+	Volume = {54},
+	Year = {2005}}
+
+@article{deloitte2019report,
+	Author = {Deloitte},
+	Date-Added = {2020-08-10 11:36:37 +0200},
+	Date-Modified = {2020-08-10 11:39:24 +0200},
+	Journal = {{Sports Business Group}},
+	Title = {{World in motion - Annual Review of Football Finance 2019}},
+	Year = {2019}}
 
 @article{kalist2016national,
 	Author = {Kalist, David E and Lee, Daniel Y},
@@ -261,26 +288,22 @@
 	Title = {{Human Aggression}},
 	Year = {1977}}
 
-@Article{dahl2009movie,
-  author    = {Dahl, Gordon and DellaVigna, Stefano},
-  title     = {Does movie violence increase violent crime?},
-  journal   = {{The Quarterly Journal of Economics}},
-  year      = {2009},
-  volume    = {124},
-  number    = {2},
-  pages     = {677--734},
-  publisher = {MIT Press},
-}
+@article{dahl2009movie,
+	Author = {Dahl, Gordon and DellaVigna, Stefano},
+	Journal = {{The Quarterly Journal of Economics}},
+	Number = {2},
+	Pages = {677--734},
+	Publisher = {MIT Press},
+	Title = {Does movie violence increase violent crime?},
+	Volume = {124},
+	Year = {2009}}
 
-@Article{poutvaara2009police,
-  author    = {Poutvaara, Panu and Priks, Mikael},
-  title     = {{The effect of police intelligence on group violence: Evidence from reassignments in Sweden}},
-  journal   = {{Journal of Public Economics}},
-  year      = {2009},
-  volume    = {93},
-  number    = {3-4},
-  pages     = {403--411},
-  publisher = {Elsevier},
-}
-
-@Comment{jabref-meta: databaseType:bibtex;}
+@article{poutvaara2009police,
+	Author = {Poutvaara, Panu and Priks, Mikael},
+	Journal = {{Journal of Public Economics}},
+	Number = {3-4},
+	Pages = {403--411},
+	Publisher = {Elsevier},
+	Title = {{The effect of police intelligence on group violence: Evidence from reassignments in Sweden}},
+	Volume = {93},
+	Year = {2009}}
